fix: images was not visible on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,3 +17,8 @@ a {
 *::-webkit-scrollbar {
   display: none;
 }
+
+.square {
+  width: 100%;
+  padding-bottom: 100%;
+}
